--- a/src/layouts/app.html
+++ b/src/layouts/app.html
@@ -5,18 +5,18 @@
         <p subtitle>Happy cake, Amit!</p>
         <div info row>
             <p content>11/11/2019</p>
-            <p content>Shuky</p>
+            <a>@Shuky</a>
         </div>
-        <p content>Happy cake, <a href="scripts/hook?n=Amit" tag>@Amit</a>.</p>
+        <p content>Happy cake, <a>@Amit</a>.</p>
         <p>We wish you many cakes, flags and cats.</p>
     </div>
     <div birthday>
         <p subtitle>Happy cake, Yarin!</p>
         <div info row>
             <p content>15/03/2019</p>
-            <p content>Nir</p>
+            <a>@Nir</a>
         </div>
-        <p content>Happy cake, <a href="scripts/hook?n=Yarin" tag>@Yarin</a>.</p>
+        <p content>Happy cake, <a>@Yarin</a>.</p>
         <p>We wish you many cats, private keys and hash functions.</p>
     </div>
 </div>
