--- a/src/layouts/app.html
+++ b/src/layouts/app.html
@@ -5,7 +5,7 @@
         <p subtitle>Happy cake, Amit!</p>
         <div info row>
             <p content>11/11/2019</p>
-            <a>@Shuky</a>
+            <a>@Nadav</a>
         </div>
         <p content>Happy cake, <a>@Amit</a>.</p>
         <p>We wish you many cakes, flags and cats.</p>
