--- a/src/layouts/app.html
+++ b/src/layouts/app.html
@@ -19,4 +19,13 @@
         <p content>Happy cake, <a>@Yarin</a>.</p>
         <p>We wish you many cats, private keys and hash functions.</p>
     </div>
+    <div birthday>
+        <p subtitle>Happy cake, Hadar!</p>
+        <div info row>
+            <p content>12/12/2018</p>
+            <a>@Yarin</a>
+        </div>
+        <p content>Happy cake, <a>@Hadar</a>.</p>
+        <p>We wish you many scratch cats, brainf*cking activities and so on.</p>
+    </div>
 </div>
