--- a/src/layouts/app.html
+++ b/src/layouts/app.html
@@ -2,6 +2,15 @@
     <p title>Happy Cake!</p>
     <p content>Welcome to happy cake, a website we use to post our birthdays.</p>
     <div birthday>
+        <p subtitle>Happy cake, Nir!</p>
+        <div info row>
+            <p content>06/12/2019</p>
+            <a>@Nadav</a>
+        </div>
+        <p content>Happy cake, <a>@Nir</a>.</p>
+        <p>We wish you the best of everything, including dogs and flags.</p>
+    </div>
+    <div birthday>
         <p subtitle>Happy cake, Amit!</p>
         <div info row>
             <p content>11/11/2019</p>
